<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parrent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:alpha="0.8"
    tools:context=".MainActivity">
    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <RelativeLayout
            android:id="@+id/title_skin"
            android:layout_width="230dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:alpha="0.6"
            android:layout_marginTop="28dp"
            android:background="@drawable/text_erea">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textStyle="bold"
                android:textSize="18pt"
                android:textColor="@color/semiwhite"

                android:gravity="center"
                android:layout_centerInParent="true">

            </TextView>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/title_skin"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@color/semixwhite">

        </TextView>

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r1"
        app:layout_constraintTop_toBottomOf="@+id/field"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintTop_toBottomOf="@+id/r1"
        android:id="@+id/r2"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_2"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/r2"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="20dp"
        app:icon="@drawable/baseline_login_24"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:layout_height="wrap_content">

    </com.google.android.material.button.MaterialButton>




</androidx.constraintlayout.widget.ConstraintLayout>